--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,32 +9,27 @@
 }
 
 body{
-  padding: 0 30%;
-  overflow-x: hidden;
+	overflow-x: hidden;
 }
+
 
 @keyframes animate{
   0% {transform: scale(1);
   }
   100% {transform: scale(1.1);} 
   }
-}
 
-@media (max-width: 600px) {
-  body {
-  padding: 0;
-  }
-}
+
+
 .menu {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	align-content: center;
-    justify-content: center;
 	font-family: 'arial', bold;
 	font-weight: 400;
 	color: black;
 	font-size: 1rem;
+	width: 1500px;
+	display: block;
+	margin: 0px auto;
+	padding: 0 0%!important;
 	}
 
 .menu ul{
@@ -44,12 +39,15 @@ body{
 	font-weight: 400;
 	font-size: 4rem ;
 	text-decoration:none;
+	
 }
 li :hover, li :link, li :visited {
-	color: white;
+	color: white!important;
 	text-decoration:none;
 }
+
 .texto {
+	width: 50%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -65,7 +63,7 @@ li :hover, li :link, li :visited {
 
 .texto p{ 
 	width: 50% ;
-	font-family: 'arial', bold
+	font-family: 'arial', bold;
 	font-weight: 300px;
 	color: black;
 	background-color: whitesmoke;
@@ -84,11 +82,15 @@ li :hover, li :link, li :visited {
     justify-content: center;
 	opacity: 1;
 }
+.form2 {
+padding: 0 30%;
+}
 
 .form .formContent {
 color: darkred;
 opacity: 1;
 }
+
 
 .home  {   
 	list-style-type: none;
@@ -110,7 +112,7 @@ h1 {
 	color: whitesmoke;
 	font-family: 'Libre Barcode 39 Extended Text', cursive;
     font-weight: 400;
-    font-size: 7rem ;
+    font-size: 7rem!important ;
     display: flex;
     align-items: center;
 	align-content: center;
@@ -123,7 +125,7 @@ h2 {
 	color: whitesmoke;
 	font-family: 'Libre Barcode 39 Extended Text', cursive;
     font-weight: 400;
-    font-size: 4rem ;
+    font-size: 4rem!important ;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -133,7 +135,7 @@ h3 {
 	margin: 0;
 	padding: 0;
 	color: darkred;
-	font-family: 'arial', bold
+	font-family: 'arial', bold;
     font-weight: 400;
     font-size: 2rem ;
     display: flex;
@@ -141,14 +143,23 @@ h3 {
     justify-content: center;
 }
 
-footer {
-	font-family: 'arial', bold
-	font-weight: 400;
-	font-size: 1.5rem;
-	display: flex;
+h4 {
+	margin: 0;
+	padding: 0;
+	color: whitesmoke;
+	font-family: 'arial', bold;
+    font-weight: 400;
+    font-size: 2rem!important ;
+    display: flex;
     align-items: center;
-	align-content: center;
     justify-content: center;
+}
+
+footer {
+	font-family: 'arial', bold;
+	font-weight: 400;
+	font-size: 1.5rem!important;
+	display: flex;
 }
 
 footer :hover, footer :visited,footer :link {
@@ -165,6 +176,12 @@ footer :hover, footer :visited,footer :link {
     animation-iteration-count: 1;
     animation-delay: 1; 
     animation-fill-mode: both;
+	padding: 0 30%
+}
+
+.slides {
+	padding: 0 20%!important
+	
 }
 
 #flyer > img {
@@ -222,3 +239,15 @@ footer :hover, footer :visited,footer :link {
 }
 
 
+@media (max-width: 400px) {
+	body {
+	padding: 0;
+	} 
+	.menu {
+		width: 400px!important;
+	}
+	header h1 {
+		font-size: 4rem !important;
+	}
+  }
+  
